--- a/packages/ui/src/globals.css
+++ b/packages/ui/src/globals.css
@@ -28,8 +28,17 @@
     --accent: 210 40% 96.1%;
     --accent-foreground: 222.2 47.4% 11.2%;
 
-    --destructive: 0 100% 50%;
+    --destructive: 12, 91%, 46%;
     --destructive-foreground: 210 40% 98%;
+
+    --success: 160, 100%, 26%;
+    --success-foreground: 210 40% 98%;
+
+    --warning: 33, 100%, 56%;
+    --warning-foreground: 210 40% 98%;
+
+    --info: 216, 100%, 40%;
+    --info-foreground: 210 40% 98%;
 
     --ring: 215 20.2% 65.1%;
 
@@ -76,6 +85,8 @@
   }
   body {
     @apply bg-background text-foreground;
-    font-feature-settings: "rlig" 1, "calt" 1;
+    font-feature-settings:
+      "rlig" 1,
+      "calt" 1;
   }
 }
