--- a/packages/ui/src/globals.css
+++ b/packages/ui/src/globals.css
@@ -5,7 +5,9 @@
 @layer base {
   :root {
     --background: 0 0% 100%;
+    --background-dark: 0 0% 0%;
     --foreground: 222.2 47.4% 11.2%;
+    --foreground-dark: 210 40% 96.1%;
 
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
@@ -14,7 +16,9 @@
     --popover-foreground: 222.2 47.4% 11.2%;
 
     --border: 214.3 31.8% 91.4%;
+    --border-dark: 222.2 47.4% 11.2%;
     --input: 214.3 31.8% 91.4%;
+    --input-dark: 222.2 47.4% 11.2%;
 
     --card: 0 0% 100%;
     --card-foreground: 222.2 47.4% 11.2%;
