--- a/packages/ui/src/globals.css
+++ b/packages/ui/src/globals.css
@@ -73,6 +73,15 @@
     --destructive: 0 63% 31%;
     --destructive-foreground: 210 40% 98%;
 
+    --success: 116, 46%, 49%;
+    --success-foreground: 210 40% 98%;
+
+    --warning: 33, 100%, 56%;
+    --warning-foreground: 210 40% 98%;
+
+    --info: 216, 100%, 40%;
+    --info-foreground: 210 40% 98%;
+
     --ring: 216 34% 17%;
 
     --radius: 0.5rem;
